# fyp_baxter_teleop

./: .gitmodules  README.md
Learning_VR/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Learning_VR.sln  SteamVR.csproj  SteamVR_Actions.csproj  SteamVR_Editor.csproj  SteamVR_Input_Editor.csproj  SteamVR_Windows_EditorHelper.csproj  actions.json  bindings_knuckles.json  bindings_vive_controller.json  unityProject.vrmanifest
Learning_VR/Assets/: ControllerInputPublisher.cs  ObjectStampedSubscriber.cs  VirtualObjectsSubscriber.cs
Learning_VR/Assets/Control_Room/Prefabs/: Ball.prefab  Cube.prefab
Learning_VR/Assets/Control_Room/Scenes/: Game.unity
Learning_VR/Assets/SteamVR/Resources/: SteamVR_Settings.asset
Learning_VR/Assets/SteamVR_Input/: SteamVR_Input_Actions.cs
Learning_VR/Assets/Urdf/default/: robot_description.urdf
Learning_VR/SteamVR_SteamVR_learning_vr/1/: bindings_holographic_controller.json  bindings_knuckles.json  bindings_oculus_touch.json  bindings_vive_controller.json  steamvr_partial_manifest.json
ros_ws/calibration_bags/: forward.bag  sides.bag  up.bag  wrist_forward.bag  wrist_up.bag
ros_ws/demostrations/: demostration_1.bag  demostration_2.bag  demostration_3.bag  demostration_4.bag  demostration_5.bag
ros_ws/src/baxter_teleop/: CMakeLists.txt  package.xml
ros_ws/src/baxter_teleop/launch/: controller_transform.launch  controllers_to_posestamped.launch  teleoperation.launch  virtual_workspace.launch
ros_ws/src/baxter_teleop/scripts/: BaxterClient.py  ObjectHandler.py  ViveClient.py  frame_as_posestamped.py
(+2 files in other folders)
